// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with invalid prop 1`] = `
.c0 {
  position: relative;
  height: 3rem;
  width: 45%;
  border: 1px solid;
  border-radius: 4px;
  color: #323232;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  background: #FFFFFF;
}

.c0:focus {
  outline: none;
}

<select
  className="c0"
  color="#323232"
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  position: relative;
  height: 3rem;
  width: 45%;
  border: 1px solid;
  border-radius: 4px;
  color: #323232;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  background: #FFFFFF;
}

.c0:focus {
  outline: none;
}

<select
  className="c0"
  color="#323232"
/>
`;

exports[`renders correctly with noBg prop 1`] = `
.c0 {
  position: relative;
  height: 3rem;
  width: 45%;
  border: none;
  border-radius: 4px;
  color: #38A9DB;
  font-size: 1rem;
  margin: 0 0 0 -10px;
  padding: 0;
  background: transparent;
}

.c0:focus {
  outline: 0;
}

<select
  className="c0"
  color="#38A9DB"
/>
`;

exports[`renders correctly with valid prop 1`] = `
.c0 {
  position: relative;
  height: 3rem;
  width: 45%;
  border: 1px solid;
  border-radius: 4px;
  color: #323232;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  background: #FFFFFF;
}

.c0:focus {
  outline: none;
}

<select
  className="c0"
  color="#323232"
/>
`;
